# HyerpxAlpha

./: .gitignore  CMakeLists.txt  Readme.md  compile_commands.json  neovim.json
.cache/clangd/index/: SwitchCtrl.cpp.9ED76AEE005F40AC.idx  SwitchCtrl.h.2B51704147121B95.idx  alpha_w.c.B0F573E91C4A2B40.idx  alpha_w.cpp.B4E7B06179F26AEA.idx  alpha_w.h.AAF741639CC34C62.idx  dialog.h.08C823C196F049E1.idx  gtkapp.h.D093E8F703999E79.idx  hyperx.c.A6C43BB0CF95B2E9.idx  hyperx.c.ECF9DAC78A32C6DC.idx  hyperx.cpp.F49294609BBF1660.idx  hyperxApp.cpp.CD5A1C85B1DC5F77.idx  hyperxApp.h.C5E8F6C502AA79F7.idx  hyperxFrame.cpp.759CB97E44057C79.idx  hyperxFrame.h.DC0AF07DD4FC48B1.idx  mainFrame.cpp.DAC0B8591D8DEE51.idx  mainFrame.h.31E91DAD9035DBFC.idx  pulse.h.4D017622135F7AA2.idx  wxWidgets.h.7F8E49ED320D563A.idx  wxwidgets.cpp.8AAE0EA9BC4F9C9F.idx
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
include/: SwitchCtrl.h  alpha_w.h  dialog.h  gtkapp.h  hyperxApp.h  hyperxFrame.h  pulse.h
src/: SwitchCtrl.cpp  dialog.cpp  hyperx.cpp  hyperxApp.cpp  hyperxFrame.cpp  main.cpp  pulse.cpp
